[project]
name = "cpn-tree"
version = "0.1.0"
description = ""
authors = [{ name = "Lucas Lopes", email = "j.lucasvinicius03@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["scikit-learn (>=1.7.2,<2.0.0)", "pandas (>=2.3.2,<3.0.0)", "numpy (>=2.3.3,<3.0.0)", "scipy (>=1.16.2,<2.0.0)", "requests (>=2.32.5,<3.0.0)"]

[tool.poetry]
packages = [{ include = "cpn_tree", from = "src" }]


[tool.poetry.group.dev.dependencies]
kagglehub = "^0.3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
